2022-03-28  Matteo Flores  <matteo_flores@apple.com>

        [ iPadOS ] 3 svg/filters/* tests are constant image failures
        https://bugs.webkit.org/show_bug.cgi?id=237689

        Unreviewed test gardening.

        * platform/ipad/TestExpectations:

2022-03-28  Wenson Hsieh  <wenson_hsieh@apple.com>

        REGRESSION (r290794): [ iOS Debug ] 4 editing/selection/* tests are constant timeouts
        https://bugs.webkit.org/show_bug.cgi?id=238155
        rdar://90593957

        Reviewed by Aditya Keerthi.

        Unmark several tests that no longer need to be marked as [ Slow ].

        * platform/ios/TestExpectations:

2022-03-28  Cameron McCormack  <heycam@apple.com>

        Remove the 1ms minimum for setTimeout
        https://bugs.webkit.org/show_bug.cgi?id=221124
        <rdar://problem/73852354>

        Reviewed by Sam Weinig.

        * TestExpectations: Disable console output in some worker tests where
        the reduced timeout would cause intemittent failures due to the
        console message sometimes not making it to the test output in time.
        * js/script-tests/weakref-finalizationregistry.js:
        (turnEventLoop): Use a timeout of 1ms instead of 0ms so that
        the deferred work task that calls the JS FinalizationRegistry
        callback gets a chance to run before we continue on to the
        assertion that it was run.

2022-03-28  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] Another WPT import
        https://bugs.webkit.org/show_bug.cgi?id=238459

        Reviewed by Tim Nguyen.

        * TestExpectations:

2022-03-28  Kate Cheney  <katherine_cheney@apple.com>

        REGRESSION (r291587): [ iOS ] editing/deleting/insert-in-orphaned-selection-crash.html is a constant text failure (238282)
        https://bugs.webkit.org/show_bug.cgi?id=238282
        <rdar://problem/90720306>

        Reviewed by Aditya Keerthi.
