@@ -1,3 +1,14 @@
+2022-03-28  Lauro Moura  <lmoura@igalia.com>
+
+        [AT-SPI] accessibility/native-text-control-attributed-string.html is failing
+        https://bugs.webkit.org/show_bug.cgi?id=237821
+
+        Reviewed by Carlos Garcia Campos.
+
+        * WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
+        (WTR::AccessibilityUIElement::attributedStringForRange): Check the
+        validity of the passed range.
+
 2022-03-28  Devin Rousso  <drousso@apple.com>
 
         [macOS] Add `WKWebView` API to control CSS "small viewport" `sv*` and "large viewport" `lv*` units
